--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
         <div class="main-content">
             {{>header}}
             <p>This site was created by Aayushi Agrawal. It uses data from mapbox.com and weatherstack.</p>
-            <img class="portrait other" src="/img/aks.png">
+            <img class="portrait other" src="/img/me.jpg">
         </div>
         
         {{>footer}}
